Se coloca icono de like en nav

--- a/src/app/shared/nav/nav.component.html
+++ b/src/app/shared/nav/nav.component.html
@@ -10,7 +10,11 @@
       <li id="beneficiosId" (click)="navigateRouter('beneficios')">Beneficios</li>
       <li id="registerId" (click)="navigateRouter('register')" class="button_loggin bg-transparent" *ngIf="!token">Regístrate</li>
       <li id="listadoId" (click)="navigateRouter('listado')" *ngIf="token">
-          Listado <span *ngIf="cantidadLike != 0"> - {{cantidadLike}}</span>
+          Listado 
+          <span class="liked-span" *ngIf="cantidadLike != 0">
+            <img src="../../../../assets/icons/like_blue.png">
+            {{cantidadLike}}
+          </span>
       </li>
     </ul>
   </div>
