--- a/src/app/modules/landing-page/components/beneficios/beneficios.component.css
+++ b/src/app/modules/landing-page/components/beneficios/beneficios.component.css
@@ -1,53 +1,52 @@
-@import '../../../../../assets/Fonts/fonts.css';
+@import "../../../../../assets/Fonts/fonts.css";
 
 .beneficios-container {
-    font-family: MontserratRegular;
-    margin: 0 auto;
-    width: 90%;
-    padding: 3% 0;
-    box-shadow: 0px 39px 21px -18px rgba(245, 245, 245, 0.63);
-}
-    
-@media only screen and (max-width: 768px) {
-    .beneficios-container{
-        width: 100%;
-    }
-}
-
-.beneficios-container p.title{
-    padding: 5% 0;
-    height: fit-content;
-    width: fit-content;
-    margin: 0 auto;
-    font-size: 3.8rem;
+  font-family: MontserratRegular;
+  margin: 0 auto;
+  width: 90%;
+  padding: 3% 0;
+  box-shadow: 0px 39px 21px -18px rgba(245, 245, 245, 50.63);
 }
 
 @media only screen and (max-width: 768px) {
-    .beneficios-container p.title{
-        font-size: 2rem;
-    }
-}
-  
-
-.beneficios-container p.title span.carita{
-    color: #2aa7df
+  .beneficios-container {
+    width: 100%;
+  }
 }
 
-.beneficios-list{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: baseline;
+.beneficios-container p.title {
+  padding: 5% 0;
+  height: fit-content;
+  width: fit-content;
+  margin: 0 auto;
+  font-size: 3.8rem;
+}
+
+@media only screen and (max-width: 768px) {
+  .beneficios-container p.title {
+    font-size: 2rem;
+  }
+}
+
+.beneficios-container p.title span.carita {
+  color: #2aa7df;
+}
+
+.beneficios-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: baseline;
 }
 
 .item {
-    margin: 20px 20px;
-    display: flex;
-    flex-direction: column;
-    font-size: 2rem;
-    text-align: center;
+  margin: 20px 20px;
+  display: flex;
+  flex-direction: column;
+  font-size: 2rem;
+  text-align: center;
 }
 
-p.text{
-    margin-top: 10px;
+p.text {
+  margin-top: 10px;
 }
