Se cambian iconos

--- a/src/app/modules/list-page/page/list-page.component.html
+++ b/src/app/modules/list-page/page/list-page.component.html
@@ -40,11 +40,11 @@
           </div>
   
           <div class="liked-span" *ngIf="item.liked == false">
-            <img src="../../../../assets/icons/like_blue.png" (click)="liked(item.tech)">
+            <img src="../../../../assets/icons/like.png" (click)="liked(item.tech)">
           </div>
   
           <div class="liked-span" *ngIf="item.liked == true">
-            <img src="../../../../assets/icons/dislike_green.png" (click)="liked(item.tech)">
+            <img src="../../../../assets/icons/like_blue.png" (click)="liked(item.tech)">
           </div>
         </div>
   
